# tvs-tools

./: README.md
Tsk Protocol/: Readme.md  天气数据协议.md  技能数据规范.md  技能数据规范_V3.md  技能数据规范_V3.old.md  设备接入必读.md
Tvs Protocol/: ApplicationControl.md  Communication.md  DeviceControl.md  ExceptionReporter.md  HTTP Headers.markdown  HTTP Headers.md  SpeechRecognizer.md  TVS终端接入规范.md  TvsAppletControl.md  TvsBasicAbility.md  TvsCustomControl.md  TvsCustomData.md  TvsDataRecognizer.md  TvsDeviceControl.md  TvsExternalMediaControl.md  TvsMediaControl.md  TvsModeControl.md  TvsOtherPlayer.md  TvsPlayerSwitch.md  TvsSemanticRecognizer.md  TvsSessionRecognizer.md  TvsShortVideoPlayebackController.md  TvsShortVideoPlayer.md  TvsTextRecognizer.md  TvsUserInterface.md  context.md  uniAccess.md  账户授权.md  通用上下文.md
doc/: API接入常见问题.md  AVS兼容API接口文档.md  AVS兼容API方案介绍.md  TVS API接口文档.md  TVS API方案介绍.md  Tencent Voice Service Reference.docx  Tencent Voice Service Reference.md  custom_data.md  richanswer接口中current_scene字段说明.md  richanswer语义current_scene说明.md  slots.md  uniAccess接口能力.md  云端API环境切换指南.md  常见网络问题.md  情绪系统API接入指南.md  提醒 云端管理接入指引.md  新服务数据协议规范.md  智能家居Iot设备管理接入指引.md  服务数据协议规范_V3.md  服务数据协议规范_V3.txt  腾讯叮当HTTP方式接入API文档.md  腾讯叮当图像识别流程文档.md  腾讯叮当模板文档.md  腾讯叮当环境切换指南.md  闹钟 云端管理接入指引.md  闹钟云端管理接入指引（凯叔版）.md  音乐播控播放模式说明.md  音乐播控播放模式说明.mk
doc/samples/cpp/: Base64.cpp  Base64.h  CMakeLists.txt  README.md  main.cpp
doc/samples/cpp/hash/: CMakeLists.txt
doc/samples/cpp/jsoncpp/: CMakeLists.txt
doc/samples/cpp/util/: HttpUtil.cpp  HttpUtil.h
evaluate/: README.md  README_EN.md  合作伙伴评测指导.md
(+149 files in other folders)
